# minos-cli

./: .buildinfo  .restyled.yaml  HISTORY.md  Makefile  README.md  authors.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  runthetests.html  search.html  searchindex.js  setup.cfg  usage.html
_modules/: index.html
_sources/: index.rst.txt
api/: minos.cli.api.deploy.html  minos.cli.api.html  minos.cli.api.init.html  minos.cli.api.new.html  minos.cli.api.set.html  minos.cli.api.utils.html  minos.cli.consoles.html  minos.cli.constants.html  minos.cli.deploying.abc.html  minos.cli.deploying.html  minos.cli.deploying.microservice.html  minos.cli.deploying.project.html  minos.cli.generators.html  minos.cli.html  minos.cli.importlib.html  minos.cli.main.html  minos.cli.main.microservice.html  minos.cli.pathlib.html  minos.cli.res.html  minos.cli.res.template.html  minos.cli.res.template.{{cookiecutter.name}}.html  minos.cli.res.template.{{cookiecutter.name}}.src.aggregates.html  minos.cli.res.template.{{cookiecutter.name}}.src.cli.html  minos.cli.res.template.{{cookiecutter.name}}.src.commands.html  minos.cli.res.template.{{cookiecutter.name}}.src.commands.services.html  minos.cli.res.template.{{cookiecutter.name}}.src.html  minos.cli.res.template.{{cookiecutter.name}}.src.queries.html  minos.cli.res.template.{{cookiecutter.name}}.src.queries.services.html  minos.cli.res.template.{{cookiecutter.name}}.tests.html  minos.cli.res.template.{{cookiecutter.name}}.tests.test_aggregates.html  minos.cli.templating.fetchers.html  (+11 more)
(+151 files in other folders)
