[tool.poetry]
name = "minos-cli"
version = "0.2.1"
description = "Command Line Interface for the Minos framework"
readme = "README.md"
repository = "https://github.com/minos-framework/minos-cli"
homepage = "http://www.minos.run/"
authors = ["Minos Framework Devs <hey@minos.run>"]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "clariteia",
    "minos",
    "microservice",
    "cli",
]
packages = [
    { include = "minos" }
]
include = [
    "AUTHORS.md",
    "HISTORY.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
rich = "^10.14.0"
copier = "^5.1.0"
markupsafe = "2.0.1"
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b"
isort = "^5.8.0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
Sphinx = "^4.0.1"
pre-commit = "^2.12.1"
sphinx-autodoc-typehints = "^1.17.0"
sphinxcontrib-apidoc = "^0.3.0"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
minos = "minos.cli:main"
